--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.1",
+    "@angular/animations": "^8.0.3",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.0.1",
     "@angular/compiler": "~8.0.1",
     "@angular/core": "~8.0.1",
-    "@angular/forms": "~8.0.1",
+    "@angular/forms": "^8.0.3",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "@types/w3c-web-usb": "^1.0.3",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "material-design-icons": "^3.0.1",
+    "ng-thermal-print": "^0.1.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
